# ticimax-mcp

./: .env.example  KURULUM.md  README.md  pyproject.toml  railway.toml  render.yaml  server.py
src/ticimax_mcp/: __init__.py  server.py
