[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticimax-mcp"
version = "0.1.0"
description = "Ticimax e-ticaret platformu için Claude MCP sunucusu"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ticimax", "mcp", "e-commerce", "claude"]
dependencies = [
    "fastmcp",
    "zeep",
    "python-dotenv",
    "requests",
]

[project.scripts]
ticimax-mcp = "ticimax_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ticimax_mcp"]
